fix: fix cart horizontal scroll

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -2,14 +2,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 5px;
     margin-bottom: 40px;
     border: 1px solid black;
 }
 
 .cartProducName {
     font-size: 15px;
-    min-width: 290px;
 }
 
 .cartProductQty {
